Renamed "token" to "tempo" which makes sense with this being largo
